[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -9,7 +9,7 @@ body {
 }
 
 .text-big {
-    font-size: 100%;
+    font-size: 300%;
 }
 
 .bold {
@@ -17,6 +17,15 @@ body {
 }
 
 .img-medium {
-    height: 500px;
+    height: 200px;
 }
 
+.container {
+    max-width: 800px;
+    margin: 0 auto;
+    color: #4a4a4a;
+    font-family: sans-serif;
+    padding-top: 60px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
